<resources>
    <string name="app_name">Lottery ticket</string>
    <string name="lottery_no">Lottery No</string>
    <string name="buy">Buy</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>forget password</u></string>
    <string name="don_t_have_an_account_sign_up">don`t Have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">already have an account? Login</string>
    <string name="confirm_password">confirm password</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="verification_link_sent_to_your_register_email_address">Verification link sent to your register email address</string>
    <string name="ok">ok</string>
    <string name="send">send</string>
    <string name="add">Add</string>
    <string name="add_lottery">Add Lottery</string>
    <string name="name">Company Name</string>
    <string name="amount">Amount</string>
</resources>