<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="mView"
    type="alok.bhowmik.lotteryticket.loginRegister.view.VerificationEmailView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verifyYourAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/verification_link_sent_to_your_register_email_address"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="@+id/emailVerificationText"
            app:layout_constraintStart_toStartOf="@id/emailVerificationText"
            app:layout_constraintTop_toBottomOf="@id/emailVerificationText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailVerificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_email_address"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verifyBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ok"
            android:minEms="10"
            android:onClick="@{()-> mView.onOkBtnClick()}"
            android:layout_height="@dimen/min_app_btn_height"
            app:layout_constraintEnd_toEndOf="@+id/emailVerificationText"
            app:layout_constraintStart_toStartOf="@+id/emailVerificationText"
            app:layout_constraintTop_toBottomOf="@+id/verifyYourAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>